kubernetes/bootstrap/alerta-overlay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alerta-overlay-service
  namespace: tenant-root
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/technitium: "true"
    external-dns.alpha.kubernetes.io/hostname: "alerta.${DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "cluster-ingress.${DOMAIN}"
spec:
  type: ExternalName
  externalName: cluster-ingress.${DOMAIN}
