kubernetes/bootstrap/auth-overlay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-overlay-service
  namespace: authentik
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/technitium: "true"
    external-dns.alpha.kubernetes.io/hostname: "auth.${DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "cluster-ingress.${DOMAIN}"
spec:
  type: ExternalName
  externalName: cluster-ingress.${DOMAIN}
