kubernetes/bootstrap/dashboard-overlay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-overlay-service
  namespace: cozy-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/technitium: "true"
    external-dns.alpha.kubernetes.io/hostname: "dashboard.${DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "cluster-ingress.${DOMAIN}"
spec:
  type: ExternalName
  externalName: cluster-ingress.${DOMAIN}
