kubernetes/bootstrap/garage-overlay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-overlay-service
  namespace: storage
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/technitium: "true"
    external-dns.alpha.kubernetes.io/hostname: "garage.${DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "cluster-ingress.${DOMAIN}"
spec:
  type: ExternalName
  externalName: cluster-ingress.${DOMAIN}
