kubernetes/bootstrap/velero-overlay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: velero-overlay-service
  namespace: velero-ui
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/technitium: "true"
    external-dns.alpha.kubernetes.io/hostname: "velero.${DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "cluster-ingress.${DOMAIN}"
spec:
  type: ExternalName
  externalName: cluster-ingress.${DOMAIN}
